--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,32 @@
-.recipe-list-item {
+@import url('https://fonts.googleapis.com/css2?family=Seaweed+Script&display=swap');
+
+.Bar {
+  width: 100%;
+  height: 15vh;
+  background-color: rgb(202, 131, 131);
   display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  position: fixed;
+  z-index: 1;
+  box-shadow: 0 4px 4px -4px rgba(0,0,0,.4);
+}
+
+.Bar .Logo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.Bar .Logo p {
+  font-family: 'Seaweed Script', cursive;
+  font-size: 4.5vh;
+  color: black;
+}
+
+.Bar .Logo .Divider {
+  background-color: black;
+  width: 230px;
+  height: 2px;
 }
