--- a/src/RecipeView.css
+++ b/src/RecipeView.css
@@ -18,7 +18,9 @@ li {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 10%
+  padding: 10%;
+  padding-top: 5vh;
+  margin-top: 15vh;
 }
 
 .Heading {
@@ -73,7 +75,7 @@ img {
 
 .IngredientsSection .Header {
   font-family: 'Quicksand', sans-serif;
-  font-size: 4vh;
+  font-size: 3.5vh;
   margin-bottom: 2vh;
 }
 
@@ -97,7 +99,7 @@ img {
 
 .DirectionsSection .Header {
   font-family: 'Quicksand', sans-serif;
-  font-size: 4vh;
+  font-size: 3.5vh;
   margin-bottom: 2vh;
 }
 
